<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Gianrico D'Angelis -  gianrico.dangelis@gmail.com
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">RestaurantManagement</string>
    <string name="btnOK">Đồng ý</string>
    <string name="btnCancel">Hủy bỏ</string>
    <string name="spinnerPrompt">Lựa chọn đăng nhập...</string>
    <string name="username">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="diners">Diners</string>
    <string name="adultdiners">Adults</string>
    <string name="childrendiners">Children</string>
    <string name="menus">Thực đơn</string>
    <string name="drinks">Đồ uống</string>
    <string name="call">Gọi bồi bàn</string>
    <string name="review">Đặt món</string>
    <string name="paybill">Thanh toán</string>
    <string name="settings">Cấu hình</string>
    <string name="tableList">Danh sách bàn</string>
    <string name="addNote">Thêm chú ý</string>
    <string name="noteHeader">Thêm chú ý cho đầu bếp hoặc bồi bàn</string>
    <string name="waiterNotified">Xác nhân</string>
    <string name="alacarte">Xem lại order</string>
    <string name="send">Gửi</string>
    <string name="noitems">Chưa chọn món</string>
    <string name="yes">Có</string>
    <string name="notyet">Không</string>
    <string name="pay">Thanh toán</string>
    <string name="confirm">Xác nhận</string>
        
</resources>
