<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Gianrico D'Angelis -  gianrico.dangelis@gmail.com
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" android:background="@color/dialog_background_df"
    android:orientation="vertical" android:padding="20dip">

    <TextView
            android:id="@+id/textHeader"
            android:layout_width="match_parent"  android:gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/noteHeader" android:textColor="@color/order_header_text" 
            android:background="@color/order_header_background"
            android:textAppearance="?android:attr/textAppearanceMedium" /> 
    
    <EditText
        android:id="@+id/txtNoteDlg"  
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" android:padding="10dip" android:imeOptions="flagNoExtractUi"
        android:text="Medium Text" android:textColor="@color/dialog_text_df" 
        android:minLines="5" android:width="300dip" android:gravity="top"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout  android:layout_width="wrap_content" 
    android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
    <Button
        android:id="@+id/btnNoteOK" android:layout_marginTop="20dip"
        android:layout_width="wrap_content" android:textSize="20sp" android:padding="10dip"
        android:layout_height="wrap_content"
        android:text="@string/btnOK" style="@style/button_df"/>
    
     <Button
        android:id="@+id/btnNoteCancel" android:layout_marginTop="20dip"
        android:layout_width="wrap_content" android:textSize="20sp" android:padding="10dip"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel" style="@style/button_df"/>
     
    </LinearLayout>

</LinearLayout>
